--- a/src/components/Modal UI/Styles.module.css
+++ b/src/components/Modal UI/Styles.module.css
@@ -11,6 +11,7 @@
   justify-content: center;
   align-items: center;
   z-index: 99;
+  transition: 250ms ease-in;
 }
 
 .modal {
@@ -19,9 +20,19 @@
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   min-width: 309px;
-  /* height: 201px; */
+  max-height: 80vh !important;
+  overflow: auto;
   text-align: center;
-}
+  /* transition: 250ms ease-in; */
+  transition: height 5s ease;
+  
+  }
+
+
+
+
+
+
 
 .modalClose {
   margin-top: 20px;
