--- a/src/components/BrandDetails/styles.module.css
+++ b/src/components/BrandDetails/styles.module.css
@@ -238,6 +238,11 @@ color: #000;
   padding: 4px;
 }
 
+
+/* .AccorBorder{
+  height: 600px;
+} */
+
 @media (max-width: 1200px) {
   .BrandLeft h2 {
     font-size: 9px;
