--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,9 @@
   position: relative;
   padding-bottom: 4px;
 }
+.sticky-top{
+  z-index: 99!important;
+}
 
 a{
   text-decoration: none !important;
