--- a/src/components/LaunchCalendar/Style.css
+++ b/src/components/LaunchCalendar/Style.css
@@ -21,7 +21,7 @@ h1.TopHeading {
     position: relative;
     color: rgb(17, 17, 17);
 }
-.timeline>li::before, .timelineHolder {
+.timeline>li::before, .timelineHolder01 {
     /* content: counter(counter, decimal-leading-zero); */
     position: absolute;
     padding: 16px;
@@ -241,7 +241,7 @@ span.ProductQty {
 }
 
 .AddNewInner p{
-    color: #000;
+    color: #b5b5b5;
 text-align: center;
 font-family: Montserrat;
 font-size: 25px;
@@ -249,6 +249,50 @@ font-style: normal;
 font-weight: 500;
 line-height: normal;
 letter-spacing: 2.5px;
+margin-bottom: 0;
+}
+
+/* Add new css 17-01-2024*/
+.ShipDate{
+    display: flex;
+    align-items: center;
+}
+.ShipDate span{
+    margin-right: 8px;
+}
+.DateAlignEOD{
+    display: flex;
+    justify-content: space-between;
+}
+.AddNewInner button.btn.btn-btn {
+    display: none;
+}
+/* B2B PortAL  */
+.ShipDate{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.BothDateTopFlex{
+    display: flex;
+    justify-content: space-between;
+}
+
+.DateEod{
+    font-size: 15px;
+    font-weight: 500;
+    padding: 3px 8px;
+    text-decoration: underline;
+    text-underline-offset: 3px;
+    
+    text-align: center;
+    letter-spacing: 1.2px;
+}
+
+.EDate {
+gap: 2px !important;
+
+    
 }
 
 /* Media Query  */
