Fixed header in newness report

--- a/src/components/newness report table/table.module.css
+++ b/src/components/newness report table/table.module.css
@@ -10,25 +10,24 @@
   font-style: normal;
   font-weight: 500;
   /* line-height: 32px;  */
-  line-height: 23px; 
+  line-height: 23px;
   letter-spacing: 1.12px;
   padding-left: 20px !important;
   vertical-align: middle;
-
 }
 
 .month {
   background-color: #eeeeee !important;
   color: #000 !important;
   font-family: Arial-500;
-  font-size: 18px;
+  font-size: 14px;
   font-style: normal;
   font-weight: 500;
-  line-height: 23px; 
+  line-height: 17px;
   vertical-align: middle;
-  /* line-height: 32px;  */
   letter-spacing: 1.12px;
   padding-left: 20px !important;
+  text-transform: uppercase;
 }
 .stickyMonth {
   position: sticky;
@@ -45,7 +44,6 @@
   line-height: 22px; /* 150% */
   letter-spacing: 1.6px;
   padding-left: 20px !important;
-
 }
 .stickyFirstColumn {
   position: sticky;
@@ -97,12 +95,11 @@
   min-width: 130px !important;
 }
 
-
 .stickyLastRow {
   position: sticky;
   bottom: 0%;
 }
-.lastRow{
+.lastRow {
   background-color: #f8f8f8 !important;
   color: #000;
   font-family: Montserrat-500;
@@ -112,7 +109,7 @@
   letter-spacing: 1.6px;
   padding-left: 20px !important;
 }
-.lastRowMonth{
+.lastRowMonth {
   background-color: #eeeeee !important;
   color: #000;
   font-family: Montserrat-500;
@@ -121,9 +118,18 @@
   line-height: 24px; /* 150% */
   letter-spacing: 1.6px;
   padding-left: 20px !important;
-
 }
-
+.dateDisplay {
+  font-size: 10px;
+  line-height: 12px;
+  /* margin-bottom: 5px; */
+  background-color: #ffdcdc;
+  color: #9e4545;
+  min-width: 174px;
+  width: 185px;
+  padding: 1px 2px;
+  margin: 0px;
+}
 /* #salesReportTable tbody tr:nth-last-child(1) {
   position: sticky;
   bottom: 0%;
