--- a/src/App.css
+++ b/src/App.css
@@ -16,14 +16,14 @@
   position: relative;
   padding-bottom: 4px;
 }
-.onHoverCursor{
+.onHoverCursor {
   cursor: pointer;
 }
-.sticky-top{
-  z-index: 99!important;
+.sticky-top {
+  z-index: 99 !important;
 }
 
-a{
+a {
   text-decoration: none !important;
 }
 @font-face {
@@ -79,20 +79,18 @@ a{
   background: #b30000; 
 } */
 
-
 .linkStyle::before {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   height: 1.5px;
   border-radius: 4px;
-  background-color: #18272F;
+  background-color: #18272f;
   bottom: 0;
   left: 0;
   transform-origin: right;
   transform: scaleX(0);
-  transition: transform .3s ease-in-out;
-  
+  transition: transform 0.3s ease-in-out;
 }
 
 .linkStyle:hover::before {
@@ -103,12 +101,10 @@ a{
   color: black;
 }
 
-.container{
+.container {
   max-width: 90% !important;
   margin: auto !important;
 }
-
-
 
 /* Search bar of nav start */
 
@@ -116,91 +112,90 @@ input#searchright {
   border-bottom: 1px solid;
 }
 
-
 .button:hover {
-transition-duration: 0.4s;
--moz-transition-duration: 0.4s;
--webkit-transition-duration: 0.4s;
--o-transition-duration: 0.4s;
-background-color: white;
-color: black;
+  transition-duration: 0.4s;
+  -moz-transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
+  background-color: white;
+  color: black;
 }
 
 .search-container {
-position: relative;
-display: inline-block;
-margin: 4px 2px;
-height: 30px;
-width: 50px;
+  position: relative;
+  display: inline-block;
+  margin: 4px 2px;
+  height: 30px;
+  width: 50px;
   top: -4px;
-/* vertical-align: bottom; */
+  /* vertical-align: bottom; */
 }
 
 .mglass {
-display: inline-block;
-pointer-events: none;
--webkit-transform: rotate(2deg);
--moz-transform: rotate(-45deg);
--o-transform: rotate(-45deg);
--ms-transform: rotate(-45deg);
-} 
+  display: inline-block;
+  pointer-events: none;
+  -webkit-transform: rotate(2deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+}
 
-.mglass svg{
+.mglass svg {
   font-size: 18px;
   font-weight: 200;
 }
 
 .searchbutton {
-position: absolute;
-font-size: 12px;
-margin: 0;
-padding: 0;
+  position: absolute;
+  font-size: 12px;
+  margin: 0;
+  padding: 0;
 }
 
 .search:focus + .searchbutton {
-transition-duration: 0.4s;
--moz-transition-duration: 0.4s;
--webkit-transition-duration: 0.4s;
--o-transition-duration: 0.4s;
-background-color: white;
-color: black;
+  transition-duration: 0.4s;
+  -moz-transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
+  background-color: white;
+  color: black;
 }
 
 .search {
-position: absolute;
-left: 49px; 
-outline: none;
-border: none;
-padding: 0;
-width: 0;
-height: 83%;
-z-index: 10;
-transition-duration: 0.4s;
--moz-transition-duration: 0.4s;
--webkit-transition-duration: 0.4s;
--o-transition-duration: 0.4s;
+  position: absolute;
+  left: 49px;
+  outline: none;
+  border: none;
+  padding: 0;
+  width: 0;
+  height: 83%;
+  z-index: 10;
+  transition-duration: 0.4s;
+  -moz-transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
 }
 
 .search-container input.search:focus {
-width: 150px; /* Bar width+1px */
-padding: 0 16px 0 0;
+  width: 150px; /* Bar width+1px */
+  padding: 0 16px 0 0;
 }
 
 .search-container .expandright {
-left: auto;
+  left: auto;
   right: 30px;
   background-color: #fff;
 }
 
 .search-container input.expandright:focus {
   width: 150px; /* Bar width+1px */
-padding: 0 16px 0 0;
-padding: 0 0 0 8px;
+  padding: 0 16px 0 0;
+  padding: 0 0 0 8px;
 }
 .NavNeedHelp .dropdown-toggle::after {
   display: inline-block;
-  margin-left: .255em;
-      content: "";
+  margin-left: 0.255em;
+  content: "";
   display: block;
   box-sizing: border-box;
   position: absolute;
@@ -209,7 +204,7 @@ padding: 0 0 0 8px;
   border-bottom: 1px solid;
   border-right: 1px solid;
   transform: rotate(45deg);
-   top: 6px;
+  top: 6px;
   right: -14px;
   border-top: unset;
   border-left: unset;
@@ -219,112 +214,112 @@ input#searchright {
 }
 
 .button {
-display: inline-block;
-margin: 4px 2px;
-/* background-color: #444; */
-font-size: 14px;
-padding-left: 32px;
-padding-right: 32px;
-height: 30px;
-line-height: 50px;
-text-align: center;
-color: rgb(0, 0, 0);
-text-decoration: none;
-cursor: pointer;
--moz-user-select: none;
--khtml-user-select: none;
--webkit-user-select: none;
--ms-user-select: none;
-user-select: none;
+  display: inline-block;
+  margin: 4px 2px;
+  /* background-color: #444; */
+  font-size: 14px;
+  padding-left: 32px;
+  padding-right: 32px;
+  height: 30px;
+  line-height: 50px;
+  text-align: center;
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  cursor: pointer;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .button:hover {
-transition-duration: 0.4s;
--moz-transition-duration: 0.4s;
--webkit-transition-duration: 0.4s;
--o-transition-duration: 0.4s;
-background-color: white;
-color: black;
+  transition-duration: 0.4s;
+  -moz-transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
+  background-color: white;
+  color: black;
 }
 
 .search-container {
-position: relative;
-display: inline-block;
-margin: 4px 2px;
-height: 11px;
-width: 50px;
+  position: relative;
+  display: inline-block;
+  margin: 4px 2px;
+  height: 11px;
+  width: 50px;
   top: -12px;
   left: 46px;
-/* vertical-align: bottom; */
+  /* vertical-align: bottom; */
 }
 
 .mglass {
-display: inline-block;
-pointer-events: none;
--webkit-transform: rotate(2deg);
--moz-transform: rotate(-45deg);
--o-transform: rotate(-45deg);
--ms-transform: rotate(-45deg);
-} 
+  display: inline-block;
+  pointer-events: none;
+  -webkit-transform: rotate(2deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+}
 
-.mglass svg{
+.mglass svg {
   font-size: 18px;
   font-weight: 200;
 }
 
 .searchbutton {
-position: absolute;
-font-size: 22px;
-margin: 0;
-padding: 0;
+  position: absolute;
+  font-size: 22px;
+  margin: 0;
+  padding: 0;
 }
 
 .search:focus + .searchbutton {
-transition-duration: 0.4s;
--moz-transition-duration: 0.4s;
--webkit-transition-duration: 0.4s;
--o-transition-duration: 0.4s;
-background-color: white;
-color: black;
+  transition-duration: 0.4s;
+  -moz-transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
+  background-color: white;
+  color: black;
 }
 
 .search {
-position: absolute;
-left: 49px; 
-outline: none;
-border: none;
-padding: 0;
-width: 0;
-height: 83%;
-z-index: 10;
-transition-duration: 0.4s;
--moz-transition-duration: 0.4s;
--webkit-transition-duration: 0.4s;
--o-transition-duration: 0.4s;
+  position: absolute;
+  left: 49px;
+  outline: none;
+  border: none;
+  padding: 0;
+  width: 0;
+  height: 83%;
+  z-index: 10;
+  transition-duration: 0.4s;
+  -moz-transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
 }
 
 .search-container input.search:focus {
-width: 150px; /* Bar width+1px */
-padding: 0 16px 0 0;
+  width: 150px; /* Bar width+1px */
+  padding: 0 16px 0 0;
 }
 
 .search-container .expandright {
   bottom: -21px;
-left: auto;
+  left: auto;
   right: 30px;
   background-color: #fff;
   height: 29px;
 }
 
 .search-container input.expandright:focus {
-  width: 190px; 
-padding: 0 16px 0 0;
-padding: 0 0 0 8px;
+  width: 190px;
+  padding: 0 16px 0 0;
+  padding: 0 0 0 8px;
 }
 .NavNeedHelp .dropdown-toggle::after {
   display: inline-block;
-  margin-left: .255em;
-      content: "";
+  margin-left: 0.255em;
+  content: "";
   display: block;
   box-sizing: border-box;
   position: absolute;
@@ -333,7 +328,7 @@ padding: 0 0 0 8px;
   border-bottom: 1px solid;
   border-right: 1px solid;
   transform: rotate(45deg);
-   top: 6px;
+  top: 6px;
   right: -14px;
   border-top: unset;
   border-left: unset;
@@ -345,7 +340,27 @@ padding: 0 0 0 8px;
   position: absolute;
 }
 
-
 .accordion-collapse.collapse.show {
   padding: 8px 0;
 }
+.react-datepicker__input-container button{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+  background-color: black;
+  color: white;
+  outline: none;
+  font-family: "Montserrat-500";
+  text-align: center;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px; /* 266.667% */
+  letter-spacing: 1.2px;
+  text-transform: uppercase;
+}
+
+
+
