--- a/src/components/OrderStatusFormSection/style.module.css
+++ b/src/components/OrderStatusFormSection/style.module.css
@@ -39,7 +39,8 @@
   line-height: normal;
   letter-spacing: 1.6px;
   flex-direction: column;
-  margin-bottom: 1.5rem;
+  /* margin-bottom: 0.5rem; */
+  margin-top: 1.5rem;
   gap: 4px;
 }
 
