--- a/src/components/loginUI/index.module.css
+++ b/src/components/loginUI/index.module.css
@@ -1,4 +1,3 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700&family=Nunito:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400&family=Open+Sans:wght@300;400;500;600&family=Rubik:wght@300;400;500;600;700;800&display=swap");
 
 .access {
@@ -9,6 +8,28 @@
   font-weight: 600;
   line-height: 32px; /* 213.333% */
   letter-spacing: 1.5px;
+}
+.tab {
+  color: #000;
+  text-align: center;
+  font-family: "Montserrat-600";
+  font-size: 15px;
+  font-style: normal;
+  line-height: 32px; /* 213.333% */
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+}
+
+.tabNotActive {
+  color: #bcbcbc;
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 32px; /* 213.333% */
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
 }
 .label {
   color: #000;
@@ -81,20 +102,18 @@
   text-decoration-line: underline;
 }
 
-
-
-.rememInput input[type=checkbox]:checked {
+.rememInput input[type="checkbox"]:checked {
   accent-color: #000;
 }
 
 /* new */
 
-.LoginMain{
+.LoginMain {
   max-width: 450px;
   margin: 70px auto 0 auto;
 }
 
-.LoginMain h4{
+.LoginMain h4 {
   color: #000;
   font-family: "Montserrat";
   font-size: 15px;
@@ -105,77 +124,76 @@
   margin-bottom: 20px;
 }
 
-
-.EmailDiv{
+.EmailDiv {
   display: flex;
   gap: 15px;
   align-items: center;
 }
-.SvgEmail{
+.SvgEmail {
   width: 40px;
   height: 40px;
 }
 
-.SvgEmail svg{
+.SvgEmail svg {
   width: 40px;
   height: 40px;
 }
 
-.LabelEmail input{
-  border-bottom: 1px solid #D9D9D9;
+.LabelEmail input {
+  border-bottom: 1px solid #d9d9d9;
   outline: none;
   margin-top: 5px;
   width: 100%;
 }
 
-.LabelEmail label{
+.LabelEmail label {
   color: #000;
-font-family: "Montserrat-500";
-font-size: 16px;
-font-style: normal;
-font-weight: 500;
-line-height: 24px; /* 150% */
+  font-family: "Montserrat-500";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 150% */
 }
 
-.LabelEmail{
+.LabelEmail {
   width: 100%;
 }
 
-.passwardDiv{
+.passwardDiv {
   margin: 30px 0 0 0;
 }
 
-.ReCheck{
+.ReCheck {
   display: flex;
   justify-content: space-between;
   margin: 30px 0 0 0;
 }
 
-.RememMe{
+.RememMe {
   display: flex;
   gap: 10px;
   color: #000;
-font-family: "Montserrat-500";
-font-size: 13px;
-font-style: normal;
-font-weight: 500;
-line-height: 32px; /* 246.154% */
-letter-spacing: 1.3px;
+  font-family: "Montserrat-500";
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px; /* 246.154% */
+  letter-spacing: 1.3px;
 }
 
-.Forget{
+.Forget {
   color: #000;
-font-family: "Montserrat-500";
-font-size: 13px;
-font-style: normal;
-font-weight: 500;
-line-height: 32px; /* 246.154% */
-letter-spacing: 1.3px;
-text-decoration-line: underline;
-text-underline-offset: 3px;
+  font-family: "Montserrat-500";
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px; /* 246.154% */
+  letter-spacing: 1.3px;
+  text-decoration-line: underline;
+  text-underline-offset: 3px;
 }
 
-.ButtonLogin{
+.ButtonLogin {
   margin: 20px 0 32px 0;
   background-color: #000;
   display: flex;
@@ -184,56 +202,54 @@ text-underline-offset: 3px;
   height: 50px;
 }
 
-.ButtonLogin a{
-  color: #FFF;
-text-align: center;
-font-family: "Montserrat";
-font-size: 15px;
-font-style: normal;
-font-weight: 600;
-line-height: 32px; /* 213.333% */
-letter-spacing: 1.5px;
-text-transform: uppercase;
+.ButtonLogin a {
+  color: #fff;
+  text-align: center;
+  font-family: "Montserrat";
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 32px; /* 213.333% */
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
 }
 
-.SignUpW p{
+.SignUpW p {
   text-align: center;
   color: #000;
-font-family:"Montserrat";
-font-size: 13px;
-font-style: normal;
-font-weight: 500;
-line-height: 32px; /* 246.154% */
-letter-spacing: 1.3px;
-text-decoration-line: underline;
-text-underline-offset: 3px;
-margin: 0 0 50px 0;
+  font-family: "Montserrat";
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px; /* 246.154% */
+  letter-spacing: 1.3px;
+  text-decoration-line: underline;
+  text-underline-offset: 3px;
+  margin: 0 0 50px 0;
 }
 
-
-.SignUpW p span{
-    font-weight: 700;
+.SignUpW p span {
+  font-weight: 700;
 }
 
-.PolicyA p{
-  color: #403A39;
-text-align: center;
-font-family: Arial;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: 32px; /* 228.571% */
-letter-spacing: 1.12px;
+.PolicyA p {
+  color: #403a39;
+  text-align: center;
+  font-family: Arial;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px; /* 228.571% */
+  letter-spacing: 1.12px;
 }
 
-.PolicyA p span{
- 
-font-weight: 500;
-text-decoration-line: underline;
-text-underline-offset: 3px;
+.PolicyA p span {
+  font-weight: 500;
+  text-decoration-line: underline;
+  text-underline-offset: 3px;
 }
 @media only screen and (max-width: 480px) {
-  .ReCheck{
+  .ReCheck {
     flex-wrap: wrap;
   }
 }
