--- a/src/components/loginUI/index.module.css
+++ b/src/components/loginUI/index.module.css
@@ -19,7 +19,10 @@
   letter-spacing: 1.5px;
   text-transform: uppercase;
 }
-
+.hr{
+  color: black;
+  opacity: 1;
+}
 .tabNotActive {
   color: #bcbcbc;
   text-align: center;
