--- a/src/components/CustomerServiceFormSection/SelectCaseReason/style.module.css
+++ b/src/components/CustomerServiceFormSection/SelectCaseReason/style.module.css
@@ -254,7 +254,7 @@ align-items: center;
 
 .ModalLast section {
   /* background-color: #000000; */
-  padding: 30px 30px ;
+  /* padding: 30px 30px ; */
   /* height: 80vh;
   overflow: auto; */
 }
