added searchable select in customer service form

--- a/src/App.css
+++ b/src/App.css
@@ -371,4 +371,12 @@ input#searchright {
 .css-1xc3v61-indicatorContainer{
   color: black !important;
 }
-
+.css-1fdsijx-ValueContainer{
+  justify-content: start;
+}
+.css-t3ipsp-control{
+  justify-content: start;
+}
+.css-1nmdiq5-menu{
+  justify-content: start;
+}
