--- a/src/components/LaunchCalendar/Style.css
+++ b/src/components/LaunchCalendar/Style.css
@@ -8,6 +8,7 @@ h1.TopHeading {
     line-height: 32px;
     letter-spacing: 2.2px;
     text-transform: uppercase;
+    margin-top: 25px;
 }
 .ProductImg img {
     height: 85px;
