--- a/src/components/Modal UI/Styles.module.css
+++ b/src/components/Modal UI/Styles.module.css
@@ -20,7 +20,7 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   min-width: 309px;
   max-height: 80vh !important;
-  overflow: auto;
+  /* overflow: auto; */
   text-align: center;
   /* transition: 250ms ease-in; */
   transition: height 5s ease;
