--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,7 @@ a {
 /* Handle on hover */
 /* ::-webkit-scrollbar-thumb:hover {
   background: #b30000; 
+  color:red;
 } */
 
 .linkStyle::before {
