--- a/src/reports/targetReport/index.module.css
+++ b/src/reports/targetReport/index.module.css
@@ -94,6 +94,40 @@
   right: 125px;
   z-index: 2;
 }
+.inorderflex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px dashed #000;
+  padding: 0px 0px 20px 0px;
+  margin: 27px 0 0 0;
+}
+.inorderflex h2 {
+  color: #000;
+  font-family: "Montserrat";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 2px;
+  margin: 0;
+}
+
+.inorderflex button {
+  color: #fff;
+  text-align: center;
+  font-family: "Montserrat";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 1.8px;
+  border-radius: 0px 8px 8px 0px;
+  background: #000;
+  height: 42px;
+  padding: 0px 13px;
+  border: none;
+}
 .stickyThirdLastColumn{
     position: sticky;
     right: 250px;
