--- a/src/components/BrandDetails/Accordion/Style.module.css
+++ b/src/components/BrandDetails/Accordion/Style.module.css
@@ -23,6 +23,9 @@ border: 1px solid #000 !important;
     border-radius: 5px;
     padding: 1px 5px;
 }
+.customPriceInput:focus {
+  outline: none;
+}
 
 .ButtonControl input{
   width: 20px !important;
