--- a/src/pages/page.module.css
+++ b/src/pages/page.module.css
@@ -4,13 +4,20 @@ background: #FFF;
 } */
 
 .widthGivenBrandDetailPage{
-    width: 90%;
+  /* max-width: 100%; */
     display: grid;
     grid-template-columns: repeat(4, auto);
-    gap: 20px;
+    gap: 15px;
     margin: auto;
   }
-
+.productCount {
+  margin-top: 4px;
+  margin-left: 11px;
+}
+ sup{
+  top: -17px;
+  left: -16px;
+}
   .HoverArrow svg{
     transition: 0.5s;
     width: 20px;
@@ -21,10 +28,12 @@ background: #FFF;
     /* margin-left: 10px; */
     transition: 0.5s;
   }
+/* animation */
 
-
-  /* animation */
-
+  .ImgHover img{
+    width: 100%;
+    height: 300px;
+  }
    .ImgHover1 {
     position: relative;
     margin: 0;
@@ -51,6 +60,7 @@ background: #FFF;
     -webkit-animation: shine .75s;
     animation: shine .75s;
 }
+
 @-webkit-keyframes shine {
     100% {
         left: 125%;
