--- a/src/components/CustomerSupportPage/Style.module.css
+++ b/src/components/CustomerSupportPage/Style.module.css
@@ -58,7 +58,7 @@ font-weight: 700;
 }
 .customerProblem p{
     /* gap: 10px; */
-    display: flex;
+    /* display: flex; */
     color: #000;
 font-family: Arial, Helvetica, sans-serif;
 font-size: 12px;
