--- a/src/components/ProductDetailCard/Styles.module.css
+++ b/src/components/ProductDetailCard/Styles.module.css
@@ -13,21 +13,26 @@
   padding: 0px 13px;
   border: none;
 }
-*{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 32px;
-    letter-spacing: 1.12px;
+* {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 1.12px;
 }
-.crossed{
-    color: #9c9c9c;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 32px;
-    letter-spacing: 1.12px;
-    text-decoration: line-through;
+.crossed {
+  color: #9c9c9c;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 1.12px;
+  text-decoration: line-through;
+}
+ p,h2{
+  text-align: start!important;
+  text-transform: capitalize;
+  line-height: 21px;
 }
