--- a/src/components/TopProductCard/index.module.css
+++ b/src/components/TopProductCard/index.module.css
@@ -1,6 +1,6 @@
 .dGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 325px);
+  grid-template-columns: repeat(auto-fill, 19%);
   justify-content: space-between;
   gap: 2.5rem 0.5rem;
   transition: all 0.25s;
@@ -9,8 +9,8 @@
 }
 .cardElement {
   border: 1px solid #e1e1e1;
-  width: 300px;
-  height: auto;
+  width: 100%;
+  height: 100%;
   display: grid;
   place-items: center;
   padding: 25px 10px;
@@ -18,24 +18,15 @@
   margin: auto;
   position: relative;
 }
-.salesHolder {
-  position: absolute;
-  top: 0;
-  right: 0;
-  min-width: 25px;
-  width: max-content;
-  padding: 2px;
-  height: 25px;
-  background: #6a6a6a;
-  color: #fff;
-  display: grid;
-  place-content: center;
-  font-family: Montserrat-500;
-  font-size: 18px;
-  line-height: 32px;
-  border: 1px solid #6a6a6a;
-  border-radius: 5px;
+.salesHolder{
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 25px;
+    padding: 2px;
+    width: 35px;
 }
+@keyframes rotate { from { transform: rotate(0deg); } to { transform: rotate(360deg); } } .salesIcon { animation: rotate 4s linear infinite; }
 .imgHolder {
   width: 175px;
   height: 175px;
@@ -46,24 +37,25 @@
   margin-top: 1rem;
   font-family: Montserrat-500;
   font-size: 22px;
-  line-height: 32px;
+  line-height: 25px;
   text-transform: uppercase;
+  text-align: center;
 }
 .titleHolder {
   font-family: Arial;
   font-size: 16px;
-  line-height: 21px;
+  line-height: 20px;
   text-transform: capitalize;
   color: #6a6a6a;
   cursor: pointer;
+  text-align: center;
 }
 .priceHolder {
   font-family: Montserrat-500;
-  font-size: 21px;
-  line-height: 32px;
+  font-size: 24px;
+  line-height: 34px;
   font-weight: bold;
   display: flex;
-  justify-content: center;
 }
 .priceCrossed {
   color: #ccc;
@@ -74,6 +66,7 @@
   color: #000;
   text-decoration: none;
 }
+
 .btn {
   background-color: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
@@ -128,17 +121,3 @@
   height: 30px;
 }
 
-@media (max-width: 1441px) {
-  .dGrid {
-    grid-template-columns: repeat(auto-fill, 300px);
-    gap: 2.5rem 0.5rem;
-  }
-}
-@media (max-width: 1023px) {
-  .dGrid {
-    grid-template-columns: repeat(auto-fill, 200px);
-  }
-  .cardElement {
-    width: 175px;
-  }
-}
