--- a/src/components/NewArrivalsPage/NewArrivals.module.css
+++ b/src/components/NewArrivalsPage/NewArrivals.module.css
@@ -1,58 +1,60 @@
 .dGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 275px);
-  justify-content: center;
+  grid-template-columns: repeat(auto-fill, 19%);
+  justify-content: space-between;
   gap: 2.5rem 0.5rem;
   transition: all 0.25s;
-  padding-top: 1rem;
-  padding-bottom: 3rem;
+  margin: 3rem auto;
   overflow-x: hidden;
 }
 .cardElement {
   border: 1px solid #e1e1e1;
-  width: 250px;
-  height: auto;
+  width: 100%;
+  height: 100%;
   display: grid;
   place-items: center;
   padding: 25px 10px;
   border-radius: 10px;
+  margin: auto;
+  position: relative;
 }
+.salesHolder{
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 25px;
+    padding: 2px;
+    width: 35px;
+}
+@keyframes rotate { from { transform: rotate(0deg); } to { transform: rotate(360deg); } } .salesIcon { animation: rotate 4s linear infinite; }
 .imgHolder {
   width: 175px;
   height: 175px;
   object-fit: contain;
   cursor: pointer;
 }
-.soonHolder {
-  font-size: 6.5px;
-  letter-spacing: 0.5px;
-  text-align: end;
-}
 .brandHolder {
   margin-top: 1rem;
   font-family: Montserrat-500;
   font-size: 22px;
-  line-height: 32px;
+  line-height: 25px;
   text-transform: uppercase;
   text-align: center;
 }
-
 .titleHolder {
   font-family: Arial;
   font-size: 16px;
-  line-height: 21px;
+  line-height: 20px;
   text-transform: capitalize;
   color: #6a6a6a;
   cursor: pointer;
+  text-align: center;
 }
 .priceHolder {
   font-family: Montserrat-500;
-  font-size: 18px;
+  font-size: 24px;
   line-height: 34px;
   font-weight: bold;
-}
-.linkHolder {
-  cursor: pointer;
 }
 .btnHolder {
   background-color: #000;
@@ -64,7 +66,8 @@
   text-transform: uppercase;
   line-height: normal;
   height: 40px;
-  width: 150px;
+  width: 100%;
+  padding: 5px;
   margin: auto;
   display: grid;
   place-content: center;
