--- a/src/components/ProductDetailCard/Styles.module.css
+++ b/src/components/ProductDetailCard/Styles.module.css
@@ -2,16 +2,19 @@
   color: #fff;
   text-align: center;
   font-family: "Montserrat";
-  font-size: 18px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
   letter-spacing: 1.8px;
-  border-radius: 8px;
+  /* border-radius: 8px; */
   background: #000;
-  height: 42px;
-  padding: 0px 13px;
+  height: 34px;
+  padding: 0px 8px;
   border: none;
+ margin-top: -3px;
+ display: grid;
+ place-content: center;
 }
 .product-card-element-holder {
   font-family: Arial, Helvetica, sans-serif;
