29MAR targetReport topProducts

--- a/src/components/TopProductCard/index.module.css
+++ b/src/components/TopProductCard/index.module.css
@@ -24,7 +24,8 @@
   right: 0;
   min-width: 25px;
   padding: 2px;
-  width: 35px;
+  width: 44px;
+  height: 40px;
 }
 @keyframes rotate {
   from {
