--- a/src/components/loginUI/index.module.css
+++ b/src/components/loginUI/index.module.css
@@ -107,6 +107,7 @@
 
 .rememInput input[type="checkbox"]:checked {
   accent-color: #000;
+  margin-top: -17px;
 }
 
 /* new */
@@ -251,6 +252,7 @@
   text-decoration-line: underline;
   text-underline-offset: 3px;
 }
+
 @media only screen and (max-width: 480px) {
   .ReCheck {
     flex-wrap: wrap;
