--- a/src/components/IssuesHandler/OrderCardHandler.module.css
+++ b/src/components/IssuesHandler/OrderCardHandler.module.css
@@ -97,6 +97,17 @@
 .searchBox::placeholder {
   font-size: 12px;
 }
+.productErrorQtyHolder::placeholder{
+  font-size: 12px;
+}
+tr th{
+  font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 1.12px;
+}
 .btnHolder {
   color: #fff;
   text-align: center;
@@ -178,7 +189,15 @@
   letter-spacing: 1.4px;
 }
 
-@media (max-width: 1024.98px) {
+@media (max-width: 1440.98px) {
+  tr th{
+    font-size: 13px;
+  }
+  .totalProductPrice{
+    width: 200px;
+  }
+}
+  @media (max-width: 1024.98px) {
   .totalProductPrice{
     width: 100%;
   }
