--- a/src/App.css
+++ b/src/App.css
@@ -366,13 +366,6 @@ input#searchright {
   letter-spacing: 1.2px;
   text-transform: uppercase;
 }
-.css-1jqq78o-placeholder,.css-qbdosj-Input,.css-1jqq78o-placeholder{
-  color: black !important;
-}
-.css-1dimb5e-singleValue,.css-1xc3v61-indicatorContainer,.css-15lsz6c-indicatorContainer,.css-t3ipsp-control, .css-qbdosj-Input input, .css-1nmdiq5-menu
- {
-  color: black;
-}
 .css-1xc3v61-indicatorContainer{
-  color: black !important;
+  color: #fff!important;
 }
