--- a/src/components/IssuesHandler/OrderCardHandler.module.css
+++ b/src/components/IssuesHandler/OrderCardHandler.module.css
@@ -127,6 +127,16 @@ tr th{
   float: right;
   width: max-content;
 }
+.listHolder{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  cursor: pointer;
+  }
+  .listHolder:hover{
+  text-decoration: underline;
+}
 .imgHolder {
   display: grid;
   grid-template-columns: repeat(auto-fill, 115px);
