--- a/src/components/CustomerSupportPage/Style.module.css
+++ b/src/components/CustomerSupportPage/Style.module.css
@@ -64,7 +64,7 @@
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 20px;
+  /* line-height: 20px; */
   letter-spacing: 1.12px;
   margin: 0;
 }
@@ -114,7 +114,7 @@
 .ShopNameBrand {
   border-left: 1px solid #e2e2e2;
   padding: 0 15px;
-  min-width: 200px;
+  min-width: 300px;
   max-width: 300px;
 }
 
