--- a/src/components/My Retailers/Styles.module.css
+++ b/src/components/My Retailers/Styles.module.css
@@ -26,6 +26,7 @@
 }
 
 .RetailerImg {
+  background: #E5E5E5;
   width: 100%;
   height: 100%;
   min-height: 40px;
@@ -122,12 +123,56 @@ background-color: #fffac9 !important;
   background-color: #d9d9d9;
   width: 3px;
 }
+.btn {
+  text-decoration: none;
+  position: relative;
+  z-index: 20;
+  transition: all 0.35s cubic-bezier(1, 0, 0, 1);
+}
+.btn:hover {
+  color: #fcfcfc;
+}
+.btnColor::before, .btnColor::after {
+  background: #000;
+}
+.btn::before,
+.btn::after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  transition: all 0.35s cubic-bezier(1.000, 0.000, 0.000, 1.000); 
+}
+.btnFillLTR::after {
+  height: 100%;
+  width: 0;
+  top: 0;
+}
+.btnFillLTR:hover::after .orderNow{
+  display: block;
+}
+.btnFillLTR:hover::after .brand{
+  display: none;
+}
+.orderNow{
+  display: none;
+}
+.brand{
+  display: block;
+}
+ 
+.btnFillLTR:hover::after { 
+  width: 100%; 
+}
+.btnFillLTR::after {
+  left: 0;
+}
 
 .Brandspan::-webkit-scrollbar-thumb {
   border-radius: 50px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #000000;
   width: 3px;
+  position: relative;
 }
 
 @media (max-width: 1399.98px) {
