--- a/src/components/NewArrivalsPage/NewArrivals.module.css
+++ b/src/components/NewArrivalsPage/NewArrivals.module.css
@@ -73,6 +73,7 @@
   line-height: 25px;
   text-transform: uppercase;
   text-align: center;
+  cursor: pointer;
 }
 .titleHolder {
   font-family: Arial;
